--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -29,32 +29,32 @@ Case details
                                 <fieldset class="govuk-fieldset">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                         <h1 class="govuk-fieldset__heading">
-                                            Channel
+                                            What type of hearing is required?’
                                         </h1>
                                     </legend>
                                     <div class="govuk-radios">
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="chanel1" name="channelradios" type="radio" value="Oral (face to face)">
+                                            <input class="govuk-radios__input" id="chanel1" name="channelradios" type="radio" value="In person">
                                             <label class="govuk-label govuk-radios__label" for="chanel1">
-                                                Oral (face to face)
+                                                In person
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="chanel2" name="channelradios" type="radio" value="Telephone (BTMeet Me)">
+                                            <input class="govuk-radios__input" id="chanel2" name="channelradios" type="radio" value="By phone">
                                             <label class="govuk-label govuk-radios__label" for="chanel2">
-                                                Telephone (BTMeet Me)
+                                                By phone
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="chanel3" name="channelradios" type="radio" value="Video (CVP)">
+                                            <input class="govuk-radios__input" id="chanel3" name="channelradios" type="radio" value="By video">
                                             <label class="govuk-label govuk-radios__label" for="chanel3">
-                                                Video (CVP)
+                                                By video
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="chanel4" name="channelradios" type="radio" value="Paper">
+                                            <input class="govuk-radios__input" id="chanel4" name="channelradios" type="radio" value="On paper">
                                             <label class="govuk-label govuk-radios__label" for="chanel4">
-                                                Paper
+                                                On paper
                                             </label>
                                         </div>
                                     </div>
