--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -14,7 +14,7 @@ Case details
 
 
 
-                        <h2 class="govuk-heading-l">Welsh and adjustments</h2>
+                        <h2 class="govuk-heading-l">Does the hearing have any other requirements?</h2>
 
                         <form
                             name="aspnetForm"
@@ -27,7 +27,7 @@ Case details
                                     <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                             <h3 class="govuk-fieldset__heading">
-                                                Select for a Welsh hearing
+                                                Select if the hearing needs to be in Welsh
                                             </h3>
                                         </legend>
                                         <div class="govuk-checkboxes" data-module="govuk-checkboxes">
@@ -48,7 +48,7 @@ Case details
                                     <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                             <h3 class="govuk-fieldset__heading">
-                                                Select any parties which have resonable adjustments
+                                                Select any parties who need reasonable adjustments
                                             </h3>
                                         </legend>
                                         <div class="govuk-checkboxes" data-module="govuk-checkboxes" >
@@ -62,7 +62,7 @@ Case details
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra1">
                                                         <div class="govuk-form-group" style="width: 600px;">
                                                             <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                                Reasonabvle adjustments
+                                                                Tell us what reasonable adjustments are required
                                                             </label>
                                                             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
                                                         </div>
@@ -79,7 +79,7 @@ Case details
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra2">
                                                         <div class="govuk-form-group" style="width: 600px;">
                                                             <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                                Reasonabvle adjustments
+                                                                Tell us what reasonable adjustments are required
                                                             </label>
                                                             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
                                                         </div>
@@ -96,7 +96,7 @@ Case details
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra3">
                                                         <div class="govuk-form-group" style="width: 600px;">
                                                             <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                                Reasonabvle adjustments
+                                                                Tell us what reasonable adjustments are required
                                                             </label>
                                                             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
                                                         </div>
