--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -51,7 +51,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Reuse the most recent panel?
+                                            Use the most recent panel again?
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -59,14 +59,14 @@ Case details
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Same panel as last hearing" >
                                             <label class="govuk-label govuk-radios__label" for="panel-1"  onclick="showJudges();">
-                                                Same panel as most recent hearing
+                                                Yes - use the same panel as most recent hearing
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="panel-2" name="panelsame" type="radio" value="Totally new panel"   >
                                             <label class="govuk-label govuk-radios__label" for="panel-2" onclick="hideJudges(); ">
-                                               Totally new panel
+                                                No - select a new panel
                                             </label>
                                         </div>
 
