--- a/app/views/hearings/pages/region.html
+++ b/app/views/hearings/pages/region.html
@@ -29,7 +29,7 @@ Case details
                                 <fieldset class="govuk-fieldset">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                         <h1 class="govuk-fieldset__heading">
-                                            Region
+                                            Where will the hearing take place?
                                         </h1>
                                     </legend>
                                     <div class="govuk-radios">
