--- a/app/views/hearings/pages/startrequest.html
+++ b/app/views/hearings/pages/startrequest.html
@@ -23,7 +23,7 @@ Case details
 
 
 
-                            <p>Smith v Smith</p>
+                            <p>Jane Smith v DWP </p>
 
                             <p>03 - Judge, Doctor and disability member</p>
 
@@ -32,17 +32,16 @@ Case details
                             </div>
 
                             <div class="govuk-inset-text">
-                                Flags: Vunerable party
+                                Case flags: Vunerable party
                             </div>
 
 
                             <div class="govuk-form-group" style="width: 600px;">
                                 <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                    What facilities are required in the court?
+                                    What facilities are required?
                                 </label>
                                 <div id="more-detail-hint" class="govuk-hint">
-                                    e.g. A tv to play video.<br>
-                                    Do not include party specific requirements.
+                                    For example, a TV to play video evidence.
                                 </div>
                                 <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
                             </div>
