--- a/app/views/hearings/pages/confirmation.html
+++ b/app/views/hearings/pages/confirmation.html
@@ -17,7 +17,7 @@ Case details
                         <div class="govuk-grid-column-two-thirds">
                             <div class="govuk-panel govuk-panel--confirmation" style="background-color: #00703c">
                                 <h1 class="govuk-panel__title">
-                                    Submission complete
+                                    Hearing request submitted
                                 </h1>
                                 <div class="govuk-panel__body">
                                     <!--Your reference number<br><strong>HDJ2123F</strong>  -->  &nbsp;
@@ -32,11 +32,11 @@ Case details
                                 We’ve submitted  this request for a hearing.  This request will be processed within 10 minutes.
                             </p>
                             <p class="govuk-body">
-                                If the listing can't be done audomativally then it will be sent to a member of staff to resolve.
+                                If the hearing can’t be listed automatically, it will be sent to a member of staff to be processed.
                             </p>
 
                             <p class="govuk-body">
-                                <a href="/hearings/pages/casedetailsdivorce" class="govuk-link">View case</a>
+                                <a href="/hearings/pages/casedetailsdivorce?submissioncomplete=true&" class="govuk-link">View case</a>
                             </p>
                         </div>
 
