--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -14,7 +14,7 @@ Case details
 
 
 
-                        <h2 class="govuk-heading-l">New panel</h2>
+                        <h2 class="govuk-heading-l">Select a new panel</h2>
 
 
                         <form
@@ -32,7 +32,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            For this hearing: Have a specific judge or not?
+                                            Do you want a specific judge?
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -40,13 +40,13 @@ Case details
                                             <div class="govuk-radios__item">
                                                 <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" onclick="showJudges();">
                                                 <label class="govuk-label govuk-radios__label" for="contact"  onclick="showJudges();">
-                                                    Specific judge
+                                                    Yes
                                                 </label>
                                             </div>
                                             <div class="govuk-radios__conditional" id="conditionaljudge" style="display:none;">
                                                 <div class="govuk-form-group">
                                                     <label class="govuk-label" for="contact-by-email">
-                                                        Name of the Judge
+                                                        Name of the judge
                                                     </label>
                                                     <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
                                                 </div>
@@ -55,7 +55,7 @@ Case details
                                             <div class="govuk-radios__item">
                                                 <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text"   onclick="hideJudges(); ">
                                                 <label class="govuk-label govuk-radios__label" for="contact-3" onclick="hideJudges(); ">
-                                                    Not specific
+                                                    No
                                                 </label>
                                             </div>
 
@@ -100,29 +100,53 @@ Case details
                                                         </legend>
                                                         <div class="govuk-radios">
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="role" name="judgerole" type="radio" value="england" checked>
-                                                                <label class="govuk-label govuk-radios__label" for="role">
+                                                                <input class="govuk-radios__input" id="role1" name="judgerole" type="radio" value="All" checked>
+                                                                <label class="govuk-label govuk-radios__label" for="role1">
                                                                     All
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="role-2" name="judgerole" type="radio" value="scotland">
+                                                                <input class="govuk-radios__input" id="role-2" name="judgerole" type="radio" value="Regional Tribunal Judge">
                                                                 <label class="govuk-label govuk-radios__label" for="role-2">
-                                                                    Circuit Judge
+                                                                    Regional Tribunal Judge
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="role-3" name="judgerole" type="radio" value="wales">
+                                                                <input class="govuk-radios__input" id="role-3" name="judgerole" type="radio" value="Tribunal Judges ">
                                                                 <label class="govuk-label govuk-radios__label" for="role-3">
-                                                                    Deputy Circuit Judge
+                                                                    Tribunal Judges
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                            <input class="govuk-radios__input" id="role-4" name="judgerole" type="radio" value="wales">
-                                                            <label class="govuk-label govuk-radios__label" for="role-4">
-                                                                Deputy District Judge - PRFD
-                                                            </label>
-                                                        </div>
+                                                                <input class="govuk-radios__input" id="role-4" name="judgerole" type="radio" value="Regional Medical Member">
+                                                                <label class="govuk-label govuk-radios__label" for="role-4">
+                                                                    Regional Medical Member
+                                                                </label>
+                                                            </div>
+                                                            <div class="govuk-radios__item">
+                                                                <input class="govuk-radios__input" id="role-5" name="judgerole" type="radio" value="Tribunal Medical Member">
+                                                                <label class="govuk-label govuk-radios__label" for="role-5">
+                                                                    Tribunal Medical Member
+                                                                </label>
+                                                            </div>
+                                                            <div class="govuk-radios__item">
+                                                                <input class="govuk-radios__input" id="role-6" name="judgerole" type="radio" value="Tribunal Specialist Medical Member">
+                                                                <label class="govuk-label govuk-radios__label" for="role-6">
+                                                                    Tribunal Specialist Medical Member
+                                                                </label>
+                                                            </div>
+                                                            <div class="govuk-radios__item">
+                                                                <input class="govuk-radios__input" id="role-7" name="judgerole" type="radio" value="Disability Qualified Member">
+                                                                <label class="govuk-label govuk-radios__label" for="role-7">
+                                                                    Disability Qualified Member
+                                                                </label>
+                                                            </div>
+                                                            <div class="govuk-radios__item">
+                                                                <input class="govuk-radios__input" id="role-8" name="judgerole" type="radio" value="Financially Qualified Member">
+                                                                <label class="govuk-label govuk-radios__label" for="role-8">
+                                                                    Financially Qualified Member
+                                                                </label>
+                                                            </div>
                                                         </div>
 
                                                     </fieldset>
@@ -132,11 +156,14 @@ Case details
                                                 <div class="govuk-form-group" id="excluejudge">
                                                     <div class="govuk-form-group">
                                                         <label class="govuk-label govuk-!-font-weight-bold" for="contact-by-email">
-                                                            Exclude a judge who wasn't on a previous panel
+                                                            Exclude a judge who wasn't on a previous panel (optional)
                                                         </label>
-                                                        <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
+                                                        <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email"  id="exludejudgefield"  style="display:none;">
                                                     </div>
-                                                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button">
+                                                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-1 " data-module="govuk-button"  id="exludenewjudge" onclick="excludejudge();">
+                                                        Exclude a judge
+                                                    </button>
+                                                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button" id="exludeanotherjudge" style="display:none;">
                                                         Exclude another judge
                                                     </button>
                                                 </div>
@@ -192,7 +219,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h1 class="govuk-fieldset__heading">
-                                            Select any other panel roles required
+                                            Select any other panel roles required   &nbsp;  &nbsp;  &nbsp;  &nbsp;  [SSCS LIST NEEDED,  &nbsp;  also, maximum of 1 of each?]
                                         </h1>
                                     </legend>
                                     <div id="waste-hint" class="govuk-hint">
@@ -238,7 +265,7 @@ Case details
                                         <div class="govuk-checkboxes__item">
                                             <input class="govuk-checkboxes__input" id="venues7" name="venues" type="checkbox" value="SUTTON SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
                                             <label class="govuk-label govuk-checkboxes__label" for="venues7">
-                                                Salaried - Medcally Qualified
+                                                Salaried - Medically qualified
                                             </label>
                                         </div>
 
@@ -317,6 +344,13 @@ Case details
         document.getElementById("excludepersonsname").style.display = "block";
         document.getElementById("excludeanotherperson").style.display = "inline-block";
         document.getElementById("excludeperson").style.display = "none";
+    }
+
+    function excludejudge()
+    {
+        document.getElementById("exludejudgefield").style.display = "block";
+        document.getElementById("exludeanotherjudge").style.display = "inline-block";
+        document.getElementById("exludenewjudge").style.display = "none";
     }
 
 
