--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -14,7 +14,7 @@ Case details
 
 
 
-                        <h2 class="govuk-heading-l">Timing and priority</h2>
+                        <h2 class="govuk-heading-l">When will the hearing take place?</h2>
 
                         <form
                             name="aspnetForm"
@@ -28,29 +28,31 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Morning or afternoon
+                                            Select a time
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
-                                        <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="ampm-1" name="ampm" type="radio" value="AM or PM" checked>
-                                            <label class="govuk-label govuk-radios__label" for="ampm-1">
-                                                AM or PM
-                                            </label>
-                                        </div>
+
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="ampm-2" name="ampm" type="radio" value="AM only"   >
+                                            <input class="govuk-radios__input" id="ampm-2" name="ampm" type="radio" value="Morning only (9am to 11.59am)"   >
                                             <label class="govuk-label govuk-radios__label" for="ampm-2">
-                                                AM only
+                                                Morning only (9am to 11.59am)
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="PM only"   >
+                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="Afternoon only (12pm to 5pm)"   >
                                             <label class="govuk-label govuk-radios__label" for="ampm-3">
-                                                PM only
+                                                Afternoon only (12pm to 5pm)
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-1" name="ampm" type="radio" value="Morning or afternoon (9am to 5pm)" checked>
+                                            <label class="govuk-label govuk-radios__label" for="ampm-1">
+                                                Morning or afternoon (9am to 5pm)
                                             </label>
                                         </div>
 
@@ -64,7 +66,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Duration
+                                            Select length of hearing
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -100,7 +102,7 @@ Case details
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="duration5" name="durationradios" type="radio" value="Other"  onclick="showothertime()"  >
                                             <label class="govuk-label govuk-radios__label" for="duration5" onclick="showothertime()"  >
-                                                Other
+                                                Another length
                                             </label>
                                         </div>
 
@@ -110,7 +112,8 @@ Case details
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            Duration
+                                                            Length of hearing
+
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
@@ -136,7 +139,7 @@ Case details
 
                                             <div class="govuk-form-group" style="width: 600px;">
                                                 <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                    Reason for non-standard time
+                                                    Give a reason why a different length of hearing is required
                                                 </label>
                                                 <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="2" aria-describedby="more-detail-hint"></textarea>
                                             </div>
@@ -164,7 +167,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Are there date requirements for the hearing?
+                                            Does the hearing need to take place on a specific date?
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -172,14 +175,14 @@ Case details
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="dates1" name="durationradios" type="radio" value="15 minutes" onclick="hiderangedate(); hidefixeddate();">
                                             <label class="govuk-label govuk-radios__label" for="dates1"  onclick="hiderangedate(); hidefixeddate();">
-                                                No specific requirements
+                                                No
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="dates2" name="durationradios" type="radio" value="30 minutes"  onclick="hiderangedate(); showfixeddate();"  >
                                             <label class="govuk-label govuk-radios__label" for="dates2" onclick="hiderangedate(); showfixeddate();">
-                                                A specific first day for the hearing
+                                                Yes
                                             </label>
                                         </div>
 
@@ -188,7 +191,7 @@ Case details
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            First date of the hearing must be
+                                                            The first date of the hearing must be
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
@@ -223,7 +226,7 @@ Case details
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="dates3" name="durationradios" type="radio" value="Other"  onclick="showrangedate(); hidefixeddate();"  >
                                             <label class="govuk-label govuk-radios__label" for="dates3" onclick="showrangedate();  hidefixeddate();"  >
-                                                A data range
+                                                Choose a date range
                                             </label>
                                         </div>
 
@@ -235,7 +238,7 @@ Case details
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            Ealiest hearing date
+                                                            Earliest hearing date  (optional)
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
@@ -271,7 +274,7 @@ Case details
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            Latest hearing date
+                                                            Latest hearing date  (optional)
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
@@ -315,7 +318,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Priority       &nbsp;  &nbsp; &nbsp; &nbsp; [SSCS DATA NEEDED]
+                                            How urgent is the hearing?  (optional)       &nbsp;  &nbsp; &nbsp; &nbsp; [SSCS DATA NEEDED]
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -323,21 +326,21 @@ Case details
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="priority-1" name="prioritychcokboxes" type="radio" value="AM or PM">
                                             <label class="govuk-label govuk-radios__label" for="priority-1">
-                                                High
+                                                High priority
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="priority-2" name="prioritychcokboxes" type="radio" value="AM only"   >
                                             <label class="govuk-label govuk-radios__label" for="priority-2">
-                                                Medium
+                                                Medium priority
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
                                             <input class="govuk-radios__input" id="priority-3" name="prioritychcokboxes" type="radio" value="PM only"   >
                                             <label class="govuk-label govuk-radios__label" for="priority-3">
-                                                Low
+                                                Low priority
                                             </label>
                                         </div>
 
