--- a/app/views/hearings/pages/venue.html
+++ b/app/views/hearings/pages/venue.html
@@ -28,7 +28,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                                         <h1 class="govuk-fieldset__heading">
-                                            Select possible venues
+                                            Select a venue
                                         </h1>
                                     </legend>
                                     <div id="waste-hint" class="govuk-hint">
